--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "illuminate/html": "^5.0",
         "fzaninotto/faker": "^1.5",
         "filp/whoops": "~1.0",
-        "guzzlehttp/guzzle": "~5.3|~6.0"
+        "guzzlehttp/guzzle": "~5.3|~6.0",
+        "wesleywillians/laravel-pagseguro": "dev-master"
     },
     "require-dev": {
+        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
@@ -50,5 +52,6 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev"
 }
